SFDC Automation/src/objects/RSM_Trending_Source_Table_FR123__c.object
<CustomObject>
    <fields>
        <fullName>RSM_Count_of_Different_Stages__c</fullName>
        <description>Behind the scenes the count of each stage needed for the trending report is being calculated - result inserted in this object</description>
        <label>RSM Count of Different Stages</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Stage__c</fullName>
        <description>The different stages being calculated by the stored procedure behind the scenes</description>
        <label>RSM Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_date__c</fullName>
        <label>Transaction date</label>
        <type>Date</type>
    </fields>
    <label>RSM Trending Source Table FR123</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RSM Trending Source Table FR123 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM Trending Source Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>